Explanation of changes: - Modified card-model-1.html to improve readability - Added autocomplete.min.css for autocomplete feature - Modified beer.min.css for update with original project - Modified material-symbols-outlined.woff2, material-symbols-rounded.woff2, and material-symbols-sharp.woff2 for updated icons - Modified system.sh.css for improved system styling - Modified buttonChangeColorRightBottom.html, genericHeader.html, and translate.html for better UI - Modified big-alpine.js for enhanced functionality - Deleted cdn.min2.js as it was no longer needed - Added autocomplete.js and autocomplete.min.js for autocomplete functionality - Modified beer-complement.js for improved beer-related features - Modified getColor.sh and saveColor.sh for better color handling

--- a/usr/share/bigbashview/framework/css/system.sh.css
+++ b/usr/share/bigbashview/framework/css/system.sh.css
@@ -1,16 +1,17 @@
 #!/usr/bin/env bash
 
-FONT_CSS=$(grep '^ *font=' ~/.config/kdeglobals | awk -F'=' '{ 
-    split($2, a, ","); 
+# This script generate CSS code based on the font settings in the user's kdeglobals file.
+
+# Extract the font settings from the kdeglobals file and format them as CSS properties.
+FONT_CSS=$(grep '^ *font=' ~/.config/kdeglobals | awk -F'=' '{
+    split($2, a, ",");
     printf "--size: %spt;\n", a[2];
     printf "font-family: \"%s\";\n", a[1];
     printf "font-weight: %s;\n", a[11];
 }')
 
-
+# Output the generated CSS code.
 echo ':root,
 body {'
 echo $FONT_CSS
 echo }
-
-
